<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <ImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:id="@+id/iv_arrowIcon"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_chevron_left_black_24dp" />


    <TextView
        android:layout_width="50dp"
        android:layout_height="37dp"
        android:id="@+id/tv_date_icon"
        android:background="@drawable/ic_date_range_black_24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="43dp"
        android:src="@drawable/ic_date_range_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_welcome"
        android:text="@string/welcome_textView"
        android:textSize="@dimen/tv_welcome_textSize"
        android:layout_marginLeft="@dimen/tv_welcome_marginLeft"
        android:layout_marginTop="@dimen/tv_welcome_marginTop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basicInformation_textView"
        android:textSize="@dimen/tv_basicInformation_textSize"
        android:layout_marginTop="@dimen/tv_basicInformation_marginTop"
        android:layout_marginLeft="@dimen/tv_basicInformation_marginLeft"/>

    <ImageView
        android:layout_width="103dp"
        android:layout_height="104dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="148dp"
        android:layout_marginTop="115dp"
        android:src="@drawable/manimage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_reg_fullName"
        android:hint="@string/reg_fullName_hint"
        android:layout_marginLeft="@dimen/et_fullName_marginLeft"
        android:layout_marginRight="@dimen/et_fullName_marginRight"
        android:layout_marginTop="@dimen/et_fullName_marginTop"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_reg_email"
        android:hint="@string/reg_email_hint"
        android:layout_marginLeft="@dimen/et_regEmail_marginLeft"
        android:layout_marginRight="@dimen/et_regEmail_marginRight"
        android:layout_marginTop="@dimen/et_regEmail_marginTop"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_password_hint"
        android:inputType="textPassword"
        android:id="@+id/et_reg_password"
        android:layout_marginLeft="@dimen/et_regPassword_marginLeft"
        android:layout_marginRight="@dimen/et_regPassword_marginRight"
        android:layout_marginTop="@dimen/et_regPassword_marginTop"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_gender_hint"
        android:id="@+id/et_reg_gender"
        android:layout_marginLeft="@dimen/et_regGender_marginLeft"
        android:layout_marginRight="@dimen/et_regGender_marginRight"
        android:layout_marginTop="@dimen/et_regGender_marginTop"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_dob_hint"
        android:id="@+id/et_reg_dob"
        android:focusable="false"
        android:layout_marginLeft="@dimen/et_reg_dob_marginLeft"
        android:layout_marginRight="@dimen/et_reg_dob_marginRight"
        android:layout_marginTop="@dimen/et_reg_dob_marginTop"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_userType_hint"
        android:id="@+id/et_reg_userType"
        android:layout_marginLeft="@dimen/et_reg_userType_marginLeft"
        android:layout_marginRight="@dimen/et_reg_userType_marginRight"
        android:layout_marginTop="@dimen/et_reg_userType_marginTop"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_occupation_hint"
        android:id="@+id/et_reg_occupation"
        android:layout_marginLeft="@dimen/et_reg_occupation_marginLeft"
        android:layout_marginRight="@dimen/et_reg_occupation_marginRight"
        android:layout_marginTop="@dimen/et_reg_occupation_marginTop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_regTitle"
        android:textColor="@color/backgroundColor"
        android:text="@string/tv_reg_title"
        android:layout_marginLeft="80dp"
        android:textSize="20sp"
        android:layout_marginTop="600dp"/>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_stoke_btn"
        android:textColor="@color/backgroundColor"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-3dp"
        android:layout_marginBottom="35dp"
        android:text="CONTINUE" />


</RelativeLayout>